# mash

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/mash/: app.py  main.py  mash  test.mprov  test2.mprov  testoutput.txt  utils.py
src/mash/plugins/: bmc.py
src/mprov-cmd/: app.py  main.py  mprov-cmd
src/mprov_cmd/: app.py  mash  utils.py
