[metadata]
name = mprov_mash
author = Jason Williams
author_email = jasonw@jhu.edu
description = mash (mProv Admin Shell)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mprov-ng/mash/
project_urls =
    Bug Tracker = https://github.com/mprov-ng/mash/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
scripts = src/mash/mash
include_package_data = True
[options.packages.find]
where = src


